# doorman-esp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.json  partitions.csv  playwright.config.mjs  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
components/config/: CMakeLists.txt  config.cpp
components/config/include/: config.h
components/device/: CMakeLists.txt  device.cpp
components/device/include/: device.h
components/gatekeeper/: CMakeLists.txt  gatekeeper.cpp
components/gatekeeper/include/: gatekeeper.h
components/statemachine/: CMakeLists.txt  statemachine.cpp
components/statemachine/include/: statemachine.h
docs/brainstorms/: 2026-03-25-doorman-architecture-brainstorm.md  2026-03-27-mvp2-wifi-provisioning-web-brainstorm.md  2026-03-29-final-product-spec-brainstorm.md  2026-04-07-per-device-config-and-ui-brainstorm.md  2026-04-23-audit-log-sousveillance-brainstorm.md  2026-04-29-frontend-preact-tanstack-migration-brainstorm.md
docs/plans/: 2026-03-25-feat-softap-ota-upload-plan.md  2026-03-29-feat-appconfig-gatekeeper-statemachine-plan.md  2026-04-07-feat-per-device-config-card-ui-plan.md  2026-04-22-refactor-module-layout-and-slack-notifier-plan.md  2026-04-23-feat-audit-log-sousveillance-plan.md  2026-04-29-feat-frontend-preact-tanstack-migration-plan.md
docs/solutions/runtime-errors/: psram-task-stack-bricks-device.md  sm-task-stack-overflow-cascade.md
frontend/: index.html  index_v2.html  preact_practice.html  preview.html  setup.html
host_test/: CMakeLists.txt  config_test.cpp  device_test.cpp  gatekeeper_test.cpp  statemachine_test.cpp
main/: CMakeLists.txt  auto_unlock.cpp  bt_manager.cpp  bt_manager.h  bt_presence_poc.cpp  bt_presence_poc.h  config_service.cpp  config_service.h  control_task.cpp  control_task.h  device_config_service.cpp  device_config_service.h  door_control.cpp  door_control.h  http_server.cpp  http_server.h  main.cpp  monitor_task.cpp  monitor_task.h  nvs_config.cpp  nvs_config.h  sm_task.cpp  sm_task.h  wifi.cpp  wifi.h
main/auth/: auth.cpp  auth.h
main/bt/: manager.cpp  manager.h  sm_task.cpp
main/device/: device_config.cpp  device_config.h
main/door/: auto_unlock.cpp  auto_unlock.h  control.cpp  control.h  control_task.cpp  control_task.h
main/http/: server.cpp  server.h
main/monitor/: monitor_task.cpp  monitor_task.h
main/slack/: notifier.cpp  notifier.h
main/wifi/: wifi.cpp  wifi.h
scripts/: host_test.sh  ota_upload.sh
tests/frontend/: README.md  fixtures.mjs  mock-server.mjs
tests/frontend/e2e/: 01-login.spec.mjs  02-door-open.spec.mjs  03-auto-unlock-toggle.spec.mjs  04-detail-modal.spec.mjs  05-ws-rssi-update.spec.mjs  99-regression-init-race.spec.mjs
tests/frontend/fixtures/: devices.json  info.json
