idf_component_register(
    SRCS
        "main.cpp"
        "wifi.cpp"
        "http_server.cpp"
        "nvs_config.cpp"
        "door_control.cpp"
        "bt_manager.cpp"
        "control_task.cpp"
        "sm_task.cpp"
        "auto_unlock.cpp"
        "device/device_config.cpp"
        "monitor_task.cpp"
    INCLUDE_DIRS
        "."
        "device"
    REQUIRES
        app_update
        esp_driver_gpio
        esp_event
        esp_http_server
        esp_netif
        esp_ringbuf
        bt
        mbedtls
        esp_wifi
        nvs_flash
        espcoredump
        statemachine
        device
    EMBED_TXTFILES
        "../frontend/index.html"
        "../frontend/setup.html"
)
