idf_component_register(
    SRCS
        "main.cpp"
        "door/control.cpp"
        "door/control_task.cpp"
        "door/auto_unlock.cpp"
        "bt/manager.cpp"
        "bt/sm_task.cpp"
        "wifi/wifi.cpp"
        "http/server.cpp"
        "monitor/monitor_task.cpp"
        "device/device_config.cpp"
        "auth/auth.cpp"
        "slack/notifier.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        app_update
        esp_driver_gpio
        esp_event
        esp_http_client
        esp_http_server
        esp_netif
        esp-tls
        esp_ringbuf
        bt
        mbedtls
        esp_wifi
        nvs_flash
        espcoredump
        statemachine
        device
    EMBED_TXTFILES
        "../frontend/index.html"
        "../frontend/setup.html"
        "../frontend/vendor/preact.mjs"
        "../frontend/vendor/preact-hooks.mjs"
        "../frontend/vendor/preact-jsx-runtime.mjs"
        "../frontend/vendor/preact-signals.mjs"
        "../frontend/vendor/preact-signals-core.mjs"
        "../frontend/vendor/htm.mjs"
        "../frontend/vendor/preact-query.mjs"
)
